@@ -92,34 +92,6 @@ sub _table
     return $dataTable;
 }
 
-# Method: precondition
-#
-#       Check if the module is configured
-#
-# Overrides:
-#
-#       <EBox::Model::DataTable::precondition>
-sub precondition
-{
-    my $mail = EBox::Global->modInstance('mail');
-    return $mail->configured();
-}
-
-# Method: preconditionFailMsg
-#
-#       Check if the module is configured
-#
-# Overrides:
-#
-#       <EBox::Model::DataTable::precondition>
-sub preconditionFailMsg
-{
-    return __x('You must enable the mail module in {oh}Module ' .
-               'Status{ch} section in order to use it.',
-               oh => '<a href="/ServiceModule/StatusView">',
-               ch => '</a>');
-}
-
 sub alwaysBccByVDomain
 {
     my ($self) = @_;
